beer-song: deprecate

--- a/config.json
+++ b/config.json
@@ -324,16 +324,14 @@
         "slug": "beer-song",
         "name": "Beer Song",
         "uuid": "bb42bc3a-139d-4cab-8b3a-2eac2e1b77b6",
-        "practices": [
-          "loops",
-          "strings"
-        ],
+        "practices": [],
         "prerequisites": [],
         "difficulty": 1,
         "topics": [
           "case",
           "vectors"
-        ]
+        ],
+        "status": "deprecated"
       },
       {
         "slug": "difference-of-squares",
