Add list-ops exercise

--- a/config.json
+++ b/config.json
@@ -1551,6 +1551,17 @@
           "lists",
           "unsafe"
         ]
+      },
+      {
+        "slug": "list-ops",
+        "name": "List Ops",
+        "uuid": "4b411941-d272-4b95-8c40-5816fecf27a2",
+        "practices": [],
+        "prerequisites": [
+          "accumulate"
+        ],
+        "difficulty": 4,
+        "topics": []
       }
     ],
     "foregone": [
