list-ops: add exercise (#2023)
Co-Authored-By: Remo Senekowitsch <remo@buenzli.dev>

--- a/config.json
+++ b/config.json
@@ -1195,6 +1195,19 @@
         ]
       },
       {
+        "slug": "list-ops",
+        "name": "List Ops",
+        "uuid": "4b411941-d272-4b95-8c40-5816fecf27a2",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 4,
+        "topics": [
+          "generics",
+          "iterators",
+          "traits"
+        ]
+      },
+      {
         "slug": "phone-number",
         "name": "Phone Number",
         "uuid": "6abac1d1-0d85-4b51-8001-97a07990630d",
