--- a/rust-tooling/generate/Cargo.toml
+++ b/rust-tooling/generate/Cargo.toml
@@ -15,6 +15,7 @@ panic = "warn"
 anyhow = "1.0.81"
 clap = { version = "4.4.8", features = ["derive"] }
 convert_case = "0.6.0"
+git2 = { version = "0.20.0", default-features = false }
 glob = "0.3.1"
 inquire = "0.6.2"
 models = { version = "0.1.0", path = "../models" }
