--- a/config.json
+++ b/config.json
@@ -324,16 +324,23 @@
         "slug": "beer-song",
         "name": "Beer Song",
         "uuid": "bb42bc3a-139d-4cab-8b3a-2eac2e1b77b6",
-        "practices": [
-          "loops",
-          "strings"
-        ],
+        "practices": [],
         "prerequisites": [],
         "difficulty": 1,
         "topics": [
           "case",
           "vectors"
-        ]
+        ],
+        "status": "deprecated"
+      },
+      {
+        "slug": "bottle-song",
+        "name": "Bottle Song",
+        "uuid": "31e8185b-39d8-48c6-88a0-f302e2864f16",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 1,
+        "topics": []
       },
       {
         "slug": "difference-of-squares",
