--- a/exercises/concept/resistor-color/.meta/config.json
+++ b/exercises/concept/resistor-color/.meta/config.json
@@ -11,7 +11,7 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/resistor-color.rs"
+      "tests/resistor_color.rs"
     ],
     "exemplar": [
       ".meta/exemplar.rs"
