--- a/exercises/practice/all-your-base/.meta/config.json
+++ b/exercises/practice/all-your-base/.meta/config.json
@@ -26,7 +26,7 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/all-your-base.rs"
+      "tests/all_your_base.rs"
     ],
     "example": [
       ".meta/example.rs"
