--- a/exercises/practice/crypto-square/.meta/config.json
+++ b/exercises/practice/crypto-square/.meta/config.json
@@ -24,7 +24,7 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/crypto-square.rs"
+      "tests/crypto_square.rs"
     ],
     "example": [
       ".meta/example.rs"
