--- a/exercises/practice/custom-set/.meta/config.json
+++ b/exercises/practice/custom-set/.meta/config.json
@@ -28,7 +28,7 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/custom-set.rs"
+      "tests/custom_set.rs"
     ],
     "example": [
       ".meta/example.rs"
