--- a/exercises/practice/dot-dsl/.meta/config.json
+++ b/exercises/practice/dot-dsl/.meta/config.json
@@ -20,7 +20,7 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/dot-dsl.rs"
+      "tests/dot_dsl.rs"
     ],
     "example": [
       ".meta/example.rs"
