--- a/exercises/practice/isbn-verifier/.meta/config.json
+++ b/exercises/practice/isbn-verifier/.meta/config.json
@@ -24,7 +24,7 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/isbn-verifier.rs"
+      "tests/isbn_verifier.rs"
     ],
     "example": [
       ".meta/example.rs"
