--- a/exercises/practice/luhn-trait/.meta/config.json
+++ b/exercises/practice/luhn-trait/.meta/config.json
@@ -25,7 +25,7 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/luhn-trait.rs"
+      "tests/luhn_trait.rs"
     ],
     "example": [
       ".meta/example.rs"
