--- a/exercises/practice/matching-brackets/.meta/config.json
+++ b/exercises/practice/matching-brackets/.meta/config.json
@@ -27,7 +27,7 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/matching-brackets.rs"
+      "tests/matching_brackets.rs"
     ],
     "example": [
       ".meta/example.rs"
