--- a/exercises/practice/ocr-numbers/.meta/config.json
+++ b/exercises/practice/ocr-numbers/.meta/config.json
@@ -25,7 +25,7 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/ocr-numbers.rs"
+      "tests/ocr_numbers.rs"
     ],
     "example": [
       ".meta/example.rs"
