--- a/exercises/practice/robot-name/.meta/config.json
+++ b/exercises/practice/robot-name/.meta/config.json
@@ -34,7 +34,7 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/robot-name.rs"
+      "tests/robot_name.rs"
     ],
     "example": [
       ".meta/example.rs"
