--- a/exercises/practice/secret-handshake/.meta/config.json
+++ b/exercises/practice/secret-handshake/.meta/config.json
@@ -8,7 +8,7 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/secret-handshake.rs"
+      "tests/secret_handshake.rs"
     ],
     "example": [
       ".meta/example.rs"
