--- a/exercises/practice/spiral-matrix/.meta/config.json
+++ b/exercises/practice/spiral-matrix/.meta/config.json
@@ -20,7 +20,7 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/spiral-matrix.rs"
+      "tests/spiral_matrix.rs"
     ],
     "example": [
       ".meta/example.rs"
