--- a/exercises/practice/atbash-cipher/.meta/config.json
+++ b/exercises/practice/atbash-cipher/.meta/config.json
@@ -27,7 +27,7 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/atbash-cipher.rs"
+      "tests/atbash_cipher.rs"
     ],
     "example": [
       ".meta/example.rs"
