--- a/exercises/practice/beer-song/.meta/config.json
+++ b/exercises/practice/beer-song/.meta/config.json
@@ -32,7 +32,7 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/beer-song.rs"
+      "tests/beer_song.rs"
     ],
     "example": [
       ".meta/example.rs"
