--- a/exercises/practice/circular-buffer/.meta/config.json
+++ b/exercises/practice/circular-buffer/.meta/config.json
@@ -29,7 +29,7 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/circular-buffer.rs"
+      "tests/circular_buffer.rs"
     ],
     "example": [
       ".meta/example.rs"
