--- a/exercises/practice/diffie-hellman/.meta/config.json
+++ b/exercises/practice/diffie-hellman/.meta/config.json
@@ -23,7 +23,7 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/diffie-hellman.rs"
+      "tests/diffie_hellman.rs"
     ],
     "example": [
       ".meta/example.rs"
