--- a/exercises/practice/nth-prime/.meta/config.json
+++ b/exercises/practice/nth-prime/.meta/config.json
@@ -25,7 +25,7 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/nth-prime.rs"
+      "tests/nth_prime.rs"
     ],
     "example": [
       ".meta/example.rs"
