--- a/exercises/practice/perfect-numbers/.meta/config.json
+++ b/exercises/practice/perfect-numbers/.meta/config.json
@@ -24,7 +24,7 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/perfect-numbers.rs"
+      "tests/perfect_numbers.rs"
     ],
     "example": [
       ".meta/example.rs"
