--- a/exercises/practice/pig-latin/.meta/config.json
+++ b/exercises/practice/pig-latin/.meta/config.json
@@ -24,7 +24,7 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/pig-latin.rs"
+      "tests/pig_latin.rs"
     ],
     "example": [
       ".meta/example.rs"
