--- a/exercises/practice/prime-factors/.meta/config.json
+++ b/exercises/practice/prime-factors/.meta/config.json
@@ -24,7 +24,7 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/prime-factors.rs"
+      "tests/prime_factors.rs"
     ],
     "example": [
       ".meta/example.rs"
