--- a/exercises/practice/rotational-cipher/.meta/config.json
+++ b/exercises/practice/rotational-cipher/.meta/config.json
@@ -24,7 +24,7 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/rotational-cipher.rs"
+      "tests/rotational_cipher.rs"
     ],
     "example": [
       ".meta/example.rs"
