--- a/exercises/practice/two-bucket/.meta/config.json
+++ b/exercises/practice/two-bucket/.meta/config.json
@@ -22,7 +22,7 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/two-bucket.rs"
+      "tests/two_bucket.rs"
     ],
     "example": [
       ".meta/example.rs"
