--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -86,6 +86,9 @@ jobs:
         with:
           toolchain: stable
 
+      - name: Checkout problem-specifications
+        run: ./bin/symlink_problem_specifications.sh
+
       - name: Run tests
         run: cd rust-tooling && cargo test
 
