activate test tera_templates_are_in_sync in ci (#2037)
It wasn't active before, because it was thought to be too slow. Turns
out it's not that bad.

---------

Co-authored-by: ellnix <ellnix@disroot.org>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -86,8 +86,14 @@ jobs:
         with:
           toolchain: stable
 
+      - name: Fetch configlet
+        run: ./bin/fetch-configlet
+
+      - name: Checkout problem-specifications
+        run: ./bin/symlink_problem_specifications.sh
+
       - name: Run tests
-        run: cd rust-tooling/ci-tests && cargo test
+        run: cd rust-tooling && cargo test
 
   rustformat:
     name: Check Rust Formatting
