macros: fix invalid file paths
This regression was introduced in:
88c13fb21eacd6d4101b98f900e525fe1be3d1ca

Co-authored-by: yjhtry <860622588@qq.com>

--- a/exercises/practice/macros/tests/invalid/Cargo.toml
+++ b/exercises/practice/macros/tests/invalid/Cargo.toml
@@ -15,41 +15,41 @@ path = "../../"
 default-features = false
 
 [[bin]]
-name = "comma-sep-rs"
-path = "comma-sep.rs"
+name = "comma_sep"
+path = "comma_sep.rs"
 
 [[bin]]
-name = "double-commas-rs"
-path = "double-commas.rs"
+name = "double_commas"
+path = "double_commas.rs"
 
 [[bin]]
-name = "only-arrow-rs"
-path = "only-arrow.rs"
+name = "only_arrow"
+path = "only_arrow.rs"
 
 [[bin]]
-name = "only-comma-rs"
-path = "only-comma.rs"
+name = "only_comma"
+path = "only_comma.rs"
 
 [[bin]]
-name = "single-argument-rs"
-path = "single-argument.rs"
+name = "single_argument"
+path = "single_argument.rs"
 
 [[bin]]
-name = "triple-arguments-rs"
-path = "triple-arguments.rs"
+name = "triple_arguments"
+path = "triple_arguments.rs"
 
 [[bin]]
-name = "two-arrows-rs"
-path = "two-arrows.rs"
+name = "two_arrows"
+path = "two_arrows.rs"
 
 [[bin]]
-name = "leading-comma-rs"
-path = "leading-comma.rs"
+name = "leading_comma"
+path = "leading_comma.rs"
 
 [[bin]]
-name = "no-comma-rs"
-path = "no-comma.rs"
+name = "no_comma"
+path = "no_comma.rs"
 
 [[bin]]
-name = "missing-argument-rs"
-path = "missing-argument.rs"
+name = "missing_argument"
+path = "missing_argument.rs"
