--- a/exercises/practice/doubly-linked-list/.meta/config.json
+++ b/exercises/practice/doubly-linked-list/.meta/config.json
@@ -22,8 +22,5 @@
       ".meta/example.rs"
     ]
   },
-  "blurb": "Write a more advanced doubly linked list implementation with cursors and iteration.",
-  "custom": {
-    "allowed-to-not-compile": "Stub allowed to not compile because pre_implemented module cannot be resolved by rustfmt in exercism v3 track structure"
-  }
+  "blurb": "Write a more advanced doubly linked list implementation with cursors and iteration."
 }
