list-ops: add more authors

--- a/exercises/practice/list-ops/.meta/config.json
+++ b/exercises/practice/list-ops/.meta/config.json
@@ -1,5 +1,9 @@
 {
-  "authors": ["ellnix"],
+  "authors": [
+    "ellnix",
+    "senekor",
+    "Morgane55440"
+  ],
   "files": {
     "solution": [
       "src/lib.rs",
