--- a/exercises/practice/parallel-letter-frequency/.meta/tests.toml
+++ b/exercises/practice/parallel-letter-frequency/.meta/tests.toml
@@ -26,24 +26,30 @@ description = "two texts with multiple letters"
 
 [6366e2b8-b84c-4334-a047-03a00a656d63]
 description = "ignore letter casing"
+rust_fn = "case_insensitivity"
 
 [92ebcbb0-9181-4421-a784-f6f5aa79f75b]
 description = "ignore whitespace"
 
 [bc5f4203-00ce-4acc-a5fa-f7b865376fd9]
 description = "ignore punctuation"
+rust_fn = "punctuation_doesnt_count"
 
 [68032b8b-346b-4389-a380-e397618f6831]
 description = "ignore numbers"
+rust_fn = "numbers_dont_count"
 
 [aa9f97ac-3961-4af1-88e7-6efed1bfddfd]
 description = "Unicode letters"
+rust_fn = "all_three_anthems_1_worker"
 
 [7b1da046-701b-41fc-813e-dcfb5ee51813]
 description = "combination of lower- and uppercase letters, punctuation and white space"
+rust_fn = "all_three_anthems_1_worker"
 
 [4727f020-df62-4dcf-99b2-a6e58319cb4f]
 description = "large texts"
 
 [adf8e57b-8e54-4483-b6b8-8b32c115884c]
 description = "many small texts"
+rust_fn = "many_times_same_text"
