--- a/exercises/practice/bob/.articles/performance/code/Cargo.toml
+++ b/exercises/practice/bob/.articles/performance/code/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2024"
 
 [dependencies]
 
-[[bin]]
-name = "code"
-path = "main.rs"
+
+[dev-dependencies]
+criterion = "0.5.1"
+
+[[bench]]
+name = "bob_benchmark"
+harness = false
