--- a/exercises/practice/alphametics/Cargo.toml
+++ b/exercises/practice/alphametics/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2024"
 # The full list of available libraries is here:
 # https://github.com/exercism/rust-test-runner/blob/main/local-registry/Cargo.toml
 [dependencies]
+itertools = "0.14.0"
