--- a/exercises/practice/wordy/Cargo.toml
+++ b/exercises/practice/wordy/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 # The full list of available libraries is here:
 # https://github.com/exercism/rust-test-runner/blob/main/local-registry/Cargo.toml
 [dependencies]
+regex = "1.10"
 
 [features]
 exponentials = []
