Fixed example solution accordingly

--- a/exercises/practice/pov/Cargo.toml
+++ b/exercises/practice/pov/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2024"
 # The full list of available libraries is here:
 # https://github.com/exercism/rust-test-runner/blob/main/local-registry/Cargo.toml
 [dependencies]
+
+[dev-dependencies]
+pretty_assertions = "1.4.1"
