flower-field replaces minesweeper

--- a/config.json
+++ b/config.json
@@ -285,12 +285,24 @@
         ]
       },
       {
+        "slug": "flower-field",
+        "name": "Flower Field",
+        "uuid": "117d6a25-960e-4d53-8347-a20490f60f36",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 7,
+        "topics": [
+          "board_state"
+        ]
+      },
+      {
         "slug": "minesweeper",
         "name": "Minesweeper",
         "uuid": "e0037ac4-ae5f-4622-b3ad-915648263495",
         "practices": [],
         "prerequisites": [],
         "difficulty": 7,
+        "status": "deprecated",
         "topics": [
           "board_state"
         ]
