--- a/exercises/practice/say/.meta/config.json
+++ b/exercises/practice/say/.meta/config.json
@@ -32,7 +32,7 @@
       ".meta/example.rs"
     ]
   },
-  "blurb": "Given a number from 0 to 999,999,999,999, spell out that number in English.",
+  "blurb": "Given a number from 0 to u64::MAX, spell out that number in English.",
   "source": "A variation on the JavaRanch CattleDrive, Assignment 4",
   "source_url": "https://web.archive.org/web/20240907035912/https://coderanch.com/wiki/718804"
 }
