robot-name: Redesign for testability
The previous exercise design had two fundamental flaws wrt. testability:

- The source of randomness was not injected by the tests. It was
  expected that users would initialize an RNG on their own. This lead to
  users simply not using any randomness at all.

- The fact that names were required to be _globally_ unique meant that
  there was no way to test for deterministic behavior, given a PRNG with
  a stable seed.

These two problems are solved by injecting an RNG from the tests and by
narrowing the requirement of unique names to a single "robot factory".

Motivated by this discussion on the forum:
https://forum.exercism.org/t/rust-track-check-predictability-of-names-in-robot-name-exercise/20077

The function `RobotFactory::new_robot` takes a `&mut self`, even
though it could take a `&self` as well. `&self` would work, because
the robot factory needs shared ownership & interior mutability anyway
to track robot names generated with `Robot::reset`. However, that
would slightly interfere with the TTD flow of this exercise. If
`RobotFactory::new_robot` takes a `&self`, users will be forced to use
interior mutability right away, even though it's unclear why that is
even necessary until they get around to implementing `Robot::reset`.

--- a/exercises/practice/robot-name/Cargo.toml
+++ b/exercises/practice/robot-name/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2024"
 # The full list of available libraries is here:
 # https://github.com/exercism/rust-test-runner/blob/main/local-registry/Cargo.toml
 [dependencies]
+# We use a wild-card specifier to minimize the risk of breaking existing
+# solutions in case the version in the test runner is updated.
+rand = "*"
 
 [lints.clippy]
 new_without_default = "allow"
