macros: simplify compile-fail tests
I was experimenting with my solution locally and it didn't work. My
solution was wrong, but the compile-fail tests didn't actually fail.
I'm not 100% sure why that was the case, but I assume it's because
I've set up a cargo workspace for my own exercise solutions. This moves
the target folder somewhere else, but the compile-fail tests assume a
specific target directory location.

Using doctests should be much more reliable, since it's using a built-in
way of Rust to do this. It's a little unconventional compared to the
other exercises, but so were the previous compile-fail tests.

One downside to this is that users who solve the exercise locally
will have to learn a new way of un-ignoring a test. I've tried to make
this smooth with appropriate comments. The test-runner should have no
problems with this, since it uses `cargo test -- --include-ignored`
to run all tests. This works for these new doctests just like for the
normal ones.

--- a/exercises/practice/macros/.meta/config.json
+++ b/exercises/practice/macros/.meta/config.json
@@ -25,7 +25,8 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/macros.rs"
+      "tests/macros.rs",
+      "src/compile_fail_tests.rs"
     ],
     "example": [
       ".meta/example.rs"
