doubly-linked-list: move clippy config to Cargo.toml
This is just a little cleaner, reducing distractions for users.

--- a/exercises/practice/doubly-linked-list/Cargo.toml
+++ b/exercises/practice/doubly-linked-list/Cargo.toml
@@ -15,3 +15,4 @@ advanced = []
 [lints.clippy]
 drop_non_drop = "allow" # tests call drop before students have implemented it
 new_without_default = "allow"
+should_implement_trait = "allow"
